// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package protowalk;

import "google/api/field_behavior.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";

option go_package = "go.chromium.org/luci/common/proto/protowalk";

message CustomExt {
  string must_equal = 1;
}

message Custom2Ext {
  bool is_set = 1;
}

extend google.protobuf.FieldOptions {
  CustomExt custom = 50002;
  Custom2Ext custom2 = 50003;
}

message Inner {
  message Embedded {
    string regular = 1;

    string deprecated = 2 [deprecated = true];
    string output = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
    string req = 4 [(google.api.field_behavior) = REQUIRED];
    string custom = 5 [(protowalk.custom).must_equal = "hello"];
  }

  message Recursive {
    int64 output_only = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
    int64 regular = 2;
    Recursive next = 3;
  }

  string regular = 1;

  string deprecated = 2 [deprecated = true];
  string output = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  string req = 4 [(google.api.field_behavior) = REQUIRED];
  string custom = 5 [(protowalk.custom).must_equal = "hello"];

  string custom2 = 500 [(protowalk.custom2).is_set = true];

  Embedded single_embed = 6;
  repeated Embedded multi_embed = 7;
  map<string,Embedded> map_embed = 8;
  google.protobuf.Struct struct = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
  Recursive recursive = 10 [deprecated = true];
}

message A {
  string a_value = 1;
  B b = 2;
  Chh c = 3;
}

message B {
  string b_value = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  A a = 2;
}

message Chh {
  map<string,A> a_map = 1;
}

message Outer {
  string regular = 1;

  string deprecated = 2 [deprecated = true];
  string output = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  string req = 4 [(google.api.field_behavior) = REQUIRED];
  string custom = 5 [(protowalk.custom).must_equal = "hello"];

  Inner single_inner = 6;
  repeated Inner multi_inner = 7;
  map<string,Inner> map_inner = 8;

  repeated Inner multi_deprecated = 9 [deprecated = true];

  map<int32,Inner> int_map_inner = 10;

  Inner output_inner = 11 [(google.api.field_behavior) = OUTPUT_ONLY];

  google.protobuf.Struct struct = 12 [(google.api.field_behavior) = OUTPUT_ONLY];

  A a = 13;
  B b = 14;
}
